--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.5",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "gsap": "^3.12.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "next": "13.4.9",
-    "next-auth": "^4.22.1",
+    "next-auth": "3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6",
