--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "next": "13.4.9",
-    "next-auth": "3",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6",
